viable, working on modal

--- a/cornell_todo_app/src/App.css
+++ b/cornell_todo_app/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  background: linear-gradient(to right bottom, #EF4035, #F8981D);
+  width: 100%;
+  min-width: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.app-wrapper {
+  background-color: #B31B1B;
+  min-width: 450px;
+  min-height: 650px;
+  padding: 30px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 3px 6px 40px #000;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header h1 {
+  color: #fff;
+  text-align: center;
+  margin: 30px 0;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.task-input {
+  outline: none;
+  width: 260px;
+  padding: 15px;
+  margin-right: 25px;
+  font-size: 20px;
+  color: #ccc;
+  background-color: #000000;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.button-add {
+  width: 70px;
+  padding: 15px 15px;
+  font-size: 20px;
+  border-radius: 10px;
+  border: 0;
+  background-color: #A2998B;
+  cursor: pointer;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.list-item {
+  display: flex;
+  margin: 20px 0;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  max-height: 30px;
+}
+
+.button-complete,
+.button-not-completed,
+.button-delete,
+.button-edit {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: transparent;
+  font-size: 28px;
+  border-radius: 50%;
+}
+
+.button-not-completed {
+  color: red;
+  margin-right: 10px;
+}
+
+.button-complete {
+  color: #4B7B2B;
+  margin-right: 10px;
+}
+
+.button-edit {
+  color: #006699;
+  margin-right: 10px;
+}
+
+.button-delete {
+  color: #222222
+}
+
+.complete {
+  text-decoration-style: solid;
+  text-decoration-line: line-through;
+  text-decoration-color: purple;
+  opacity: 0.6;
+}
+
+.list {
+  width: 220px;
+  background-color: #b31B1B;
+  border: none;
+  color: #222222;
+  font-size: 20px;
+  padding-left: 10px;
+  margin-right: 15px;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+input:focus,
+button:focus {
+  outline:none;
 }
